--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "currently": "0.0.8",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "if-env": "^1.0.4",
