--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "server_official.js",
   "scripts": {
-    "start": "node server_official.js",
-    "client": "cd client && npm run start",
-    "install": "cd client && yarn install",
-    "heroku-postbuild": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+   "start:prod": "node server_official.js",
+   "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+   "client": "cd client && npm run start",
+   "install": "cd client && yarn install",
+   "build": "cd client && npm run build",
+   "heroku-postbuild": "npm run build"
+
 
   },
   "author": "",
