--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
    "start:prod": "node server_official.js",
-   "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-   "client": "cd client && npm run start",
-   "install": "cd client && yarn install",
-   "build": "cd client && npm run build",
+   "start:dev": "concurrently \"nodemon --ignore 'Client/*'\" \"npm run Client\"",
+   "client": "cd Client && npm run start",
+   "install": "cd Client && yarn install",
+   "build": "cd Client && npm run build",
    "heroku-postbuild": "npm run build"
 
 
