--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "start:prod": "node server_official.js",
    "start:dev": "concurrently \"nodemon --ignore 'Client/*'\" \"npm run Client\"",
    "client": "cd Client && npm run start",
-   
+   "install": "cd Client && yarn install",
    "build": "cd Client && npm run build",
    "heroku-postbuild": "npm run build"
 
