--- a/Client/package.json
+++ b/Client/package.json
@@ -2,6 +2,7 @@
   "name": "fitfinder",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
     "concurrently": "^3.6.1",
