--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "start:prod": "node server_official.js",
    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
    "client": "cd client && npm run start",
-   "heroku-postbuild": "npm run build"
+   "heroku-postbuild": "cd client && yarn && yarn run build"
 
 
   },
